--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 workflows:
   test-env-vars:
     jobs:
-    - build
+      - build
 
 jobs:
   build:
@@ -12,6 +12,6 @@ jobs:
     steps:
       - checkout
       - run:
-        name: "echo an env var that is part of our project"
-        command:
-          echo $MY_ENV_VAR
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $MY_ENV_VAR
