--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -13,5 +13,5 @@ jobs:
       - checkout
       - run:
           name: "echo an env var that is part of our project"
-          command: |
+          command:
             echo $MY_ENV_VAR
